--- a/Assignment2/Makefile
+++ b/Assignment2/Makefile
@@ -1,5 +1,9 @@
 default: all
 
+concurrency2:
+	gcc -lpthread -o concurrency2 concurrency2.c
 
+all: concurrency2
 
 clean:
+	rm -f *.o concurrency2
