--- a/Assignment2/Makefile
+++ b/Assignment2/Makefile
@@ -1,9 +1,45 @@
+LATEX	= latex -shell-escape
+DVIPS	= dvips
+DVIPDF  = dvipdft
+XDVI	= xdvi -gamma 4
+GH		= gv
+
+EXAMPLES = $(wildcard *.h)
+SRC	:= $(shell egrep -l '^[^%]*\\begin\{document\}' *.tex)
+TRG	= $(SRC:%.tex=%.dvi)
+PSF	= $(SRC:%.tex=%.ps)
+PDF	= $(SRC:%.tex=%.pdf)
+
 default: all
+
+pdf: $(PDF)
+
+ps: $(PSF)
+
+$(TRG): %.dvi: %.tex $(EXAMPLES)
+	$(LATEX) $<
+	$(LATEX) $<
+	$(LATEX) $<
+
+$(PSF):%.ps: %.dvi
+	$(DVIPS) -R -Poutline -t letter $< -o $@
+
+$(PDF): %.pdf: %.ps
+#	$(DVIPDF) -o $@ $<
+	ps2pdf $<
+
+show: $(TRG)
+	@for i in $(TRG) ; do $(XDVI) $$i & done
+
+showps: $(PSF)
+	@for i in $(PSF) ; do $(GH) $$i & done
+
+all: pdf concurrency2
 
 concurrency2:
 	gcc -lpthread -o concurrency2 concurrency2.c
 
-all: concurrency2
-
 clean:
-	rm -f *.o concurrency2
+	rm -f *.pdf *.ps *.dvi *.out *.log *.aux *.bbl *.blg *.pyg *.o concurrency1
+
+.PHONY: all show clean ps pdf showps
