--- a/c5/Makefile
+++ b/c5/Makefile
@@ -1,6 +1,8 @@
 
 default:
 	gcc c5.c -Wall -std=c99 -o prog -lpthread -lm
+	gcc danielconc.c -Wall -std=c99 -o danconc -lpthread -lm
 
 clean:
 	rm -f *.o prog
+	rm -f *.o danconc
